Refactor blog views to use BlogComments view model
Introduce BlogComments view model to aggregate blogs and comments for views. Update BlogController actions and refactor Index.cshtml and BlogDetalis.cshtml to use the new model. Enable lazy loading in Comments model. Add recent blogs to sidebar and localize comment form. Update project file to include new class.

--- a/TravelTripProject/TravelTripProject.csproj
+++ b/TravelTripProject/TravelTripProject.csproj
@@ -139,6 +139,7 @@
     <Compile Include="Models\Class\Address.cs" />
     <Compile Include="Models\Class\Admin.cs" />
     <Compile Include="Models\Class\Blog.cs" />
+    <Compile Include="Models\Class\BlogComments.cs" />
     <Compile Include="Models\Class\Comments.cs" />
     <Compile Include="Models\Class\Contect.cs" />
     <Compile Include="Models\Class\Context.cs" />
