Add dynamic blog sections and partial views to homepage
Refactored IndexController and Index.cshtml to display dynamic blog content using data from the database. Added five new partial views (Partial1–Partial5) for various blog data presentations. Updated project file to include new partials. Localized UI text to Turkish and updated footer information. Static homepage content replaced with data-driven sections for a more interactive travel blog experience.

--- a/TravelTripProject/TravelTripProject.csproj
+++ b/TravelTripProject/TravelTripProject.csproj
@@ -260,6 +260,11 @@
     <Content Include="Views\About\Index.cshtml" />
     <Content Include="Views\Blog\Index.cshtml" />
     <Content Include="Views\Blog\BlogDetalis.cshtml" />
+    <Content Include="Views\Index\Partial1.cshtml" />
+    <Content Include="Views\Index\Partial2.cshtml" />
+    <Content Include="Views\Index\Partial3.cshtml" />
+    <Content Include="Views\Index\Partial4.cshtml" />
+    <Content Include="Views\Index\Partial5.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
